--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
     background-color: black;
 }
 
-body{
+body {
     background: url('../projeto-redes-sociais/imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
@@ -32,4 +32,13 @@ main {
     height: 627px;
     width: 311px;
     background: url('../projeto-redes-sociais/imagens/frame-iphone.png') no-repeat;
+}
+
+#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    width: 269px;
+    height: 471px;
 }
