--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main {
     background: url('../projeto-redes-sociais/imagens/frame-iphone.png') no-repeat;
 }
 
-#tela{
+#tela {
     position: relative;
     top: 80px;
     left: 22px;
@@ -42,3 +42,26 @@ main {
     width: 269px;
     height: 471px;
 }
+
+#redes-sociais {
+    text-align: right;
+}
+
+#redes-sociais img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37);
+    box-sizing: border-box;
+}
+
+
+#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.644);
+    transform: translate(-2px, -2px);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.432);
+    transition: transform .7s, border 1s;
+}
+
+
