--- a/projeto/style.css
+++ b/projeto/style.css
@@ -9,13 +9,12 @@
 html, body {
     height: 100vh;
     width: 100vw;
-    background-color: black;
 }
 
 body {
-    background: url('../projeto-redes-sociais/imagens/fundo-madeira.jpg') no-repeat top center;
-    background-size: cover;
+    background: url('imagens/fundo-madeira.jpg');
     background-attachment: fixed;
+    background-size: cover;
 }
 
 main {
@@ -23,45 +22,43 @@ main {
     position: relative;
 }
 
-#telefone {
+section#telefone {
     position: absolute;
     top: 50%;
     left: 50%;
+
     transform: translate(-50%, -50%);
 
     height: 627px;
     width: 311px;
-    background: url('../projeto-redes-sociais/imagens/frame-iphone.png') no-repeat;
+    background: url('../projeto/imagens/frame-iphone.png') no-repeat;
 }
 
-#tela {
+iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
 
-    width: 267px;
+    width: 269px;
     height: 471px;
 }
 
-#redes-sociais {
+section#redes-sociais {
     text-align: right;
 }
 
-#redes-sociais img {
+
+section#redes-sociais img {
     width: 50px;
     height: 50px;
     margin: 10px;
     border-radius: 50%;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.144);
     box-sizing: border-box;
 }
 
-
-#redes-sociais img:hover {
+section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.644);
-    transform: translate(-2px, -2px);
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.432);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.219);
     transition: transform .7s, border 1s;
 }
-
-
